--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-<h1> German Villalobos</h1>
-<p> Graduate Student </p>
-<p> Department of Mathematics </p>
-<p> University of Houston </p>
+<html>
+  <head>
+    </head>
+  <body>
+    <h1> German Villalobos</h1>
+    <p> Graduate Student </p>
+    <p> Department of Mathematics </p>
+    <p> University of Houston </p>
+
+    <h1> Research </h1>
+  
+    <p> Research consists of </p>
+  
+    <h1> Contact </h1>
+      <p> german.villalobos0@gmail.com </p>
+  </body>
+</html>
