--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
+  <div class="header">
   <head>
     </head>
+  </div>
   <body>
     <h1> German Villalobos</h1>
     <p> Graduate Student </p>
