Adjusting header and theme configuration

--- a/experience.html
+++ b/experience.html
@@ -5,10 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>German Villalobos</title>
-    <h1> Data Analyst \ Data Scientist </h1>
-    <!-- Jekyll Cayman Theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jekyll-theme-cayman@0.1.1/style.css">
+    <title>German Villalobos - Experience</title>
+    <h1> German Villalobos </h1>
+    <h2> Data Analyst \ Data Scientist </h2>
 
 </head>
 
