--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>German Villalobos Home Page</title>
+    <title>German Villalobos - Home Page</title>
     <h1> German Villalobos </h1>
-    <h2> Data Analyst \ Data Scientist </h2>
-    
-<!-- Jekyll Cayman Theme -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jekyll-theme-cayman@0.1.1/style.css">
+    <h2> Data Analyst \ Data Scientist </h2>    
 
 </head>
 
